--- a/style.css
+++ b/style.css
@@ -1,41 +1,41 @@
 
 body {
-    background-color: #5CDB95;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0C0032;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0px;
 }
 
 #title {
     display: flex;
-    color: #def1c2;
+    color: #661bff;
     font-size: 25px;
     justify-content: center;
-    background-color: #05386B;
+    background-color: #0C0032;
 }
 
 #top-bar {
-    background-color: #05386B;
+    background-color: #000000;
     padding-top: 10px;
     padding-bottom: 10px;
-    border-top: 7px ridge #234d90;
-    border-bottom: 7px ridge #234d90;
+    border-top: 7px ridge #21087e;
+    border-bottom: 7px ridge #21087e;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
 .items {
-    background-color: #5CDB95;
-    color: #05386B;
+    background-color: #0C0032;
+    color: #661bff;
     border-radius: 25px;
     padding: 10px;
     font-size: 25px;
 }
 
 .items:hover{
-    background-color: #379683;
-    border: 3px double #8EE4AF;
-    color: #EDF5E1;
+    background-color: #0e0e0e;
+    border: 3px double #3500D3;
+    color: #471bfc;
 }
 
 #home-body{
@@ -46,7 +46,7 @@ body {
     justify-content: center;
     align-content: flex-start;
     font-size: 25px;
-    color: #05386B;
+    color: #661bff;
 }
 
 a {
@@ -61,4 +61,38 @@ a {
 #special {
     color: #fffc65;
     font-style: italic;
+}
+
+.italics {
+    font-style: italic
+}
+
+#container {
+    display: flex;
+    align-items: flex-start;
+}
+
+#about-para {
+    margin-top: 50px;
+}
+
+.picture-box {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.slep {
+    width: 400px;
+    border: 7px ridge #21087e;
+    margin: 30px 50px 30px 0px;
+    border-radius: 25px;
+}
+
+.link {
+    text-decoration: underline;
+    color: #3500D3;
+}
+
+ul {
+    margin: 0px;
 }
